# ChangeLog for dev-libs/libf2c
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libf2c/ChangeLog,v 1.9 2004/07/01 11:49:28 dholm Exp $

  01 Jul 2004; David Holm <dholm@gentoo.org> libf2c-20021004-r1.ebuild:
  Added to ~ppc.

*libf2c-20021004-r1 (01 Jul 2004)

  01 Jul 2004; Danny van Dyk <kugelfang@gentoo.org>
  +files/libf2c-20021004-shared-object.patch, +libf2c-20021004-r1.ebuild:
  Patched the makefile.u to produce a shared object with -fPIC. (see BUG #55386)

  07 Apr 2004; Travis Tilley <lv@gentoo.org> libf2c-20021004.ebuild:
  added ~amd64 to keywords

  07 Jul 2003; Michael Sterrett <msterret@gentoo.org> libf2c-20021004.ebuild:
  more error checking

  02 Nov 2002; Hannes Mehnert <hannes@gentoo.org> libf2c-20021004.ebuild:
  marked stable for x86

*libf2c-20021004 (28 Oct 2002)

  28 Oct 2002; Hannes Mehnert <hannes@gentoo.org> libf2c-20021004.ebuild,
  ChangeLog: Initial ebuild. Thanks to a-tenderholt@northwestern.edu.