@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libf2c
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libf2c/ChangeLog,v 1.9 2004/07/01 11:49:28 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libf2c/ChangeLog,v 1.10 2004/07/01 16:48:00 kugelfang Exp $
+
+  01 Jul 2004; Danny van Dyk <kugelfang@gentoo.org> libf2c-20021004-r1.ebuild:
+  Marked ~sparc on behalf of ciaranm.
 
   01 Jul 2004; David Holm <dholm@gentoo.org> libf2c-20021004-r1.ebuild:
   Added to ~ppc.
